k8smanifests/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  template:
    metadata:
      labels:
        name: postgres-pod
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
  replicas: 1
  selector:
    matchLabels:
      name: postgres-pod
