k8smanifests/client-np-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-np-service
spec:
  type: NodePort
  ports:
    - port: 3000
      nodePort: 31704
      targetPort: 3000
  selector:
    name: client-pod
