k8smanifests/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    name: nginx-pod
