k8smanifests/worker-service.yml
apiVersion: v1
kind: Service
metadata:
  name: worker-service
spec:
  type: ClusterIP
  ports:
    - port: 80      
  selector:
    name: worker-pod
