k8smanifests/ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 3000
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 3000
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: client-np-service
                port:
                  number: 3000
